Use TruffleFile in getpid